
Version 0.6-0 (??-Apr-2011, Rev. ???)
=====================================

- The GUI supports edges with variables (although sum checking of
  outgoing edges is disabled then till values are assigned to the
  variables.)
  
- New function: substituteEps

- Changes in class graphMCP:
 
  - Attribute for node weights is called "nodeWeight".  

  - New mandatory edge attribute "epsilon".

Version 0.5-0 (28-Mar-2011, Rev. 525)
=====================================

- We use weights instead of direct alpha allocation in the graphs.
  This causes major API changes:

  - gMCP and many other functions have an argument alpha with an
    default 0.05

  - getAlpha is now called getWeights since it returns the weights

  - graph2weights is removed since it is a special case of getWeights

- due to these changes above, graphs that have been saved to files
  will cause errors when loaded and processed

- getX/Y were renamed into getX/YCoordinates due to Rgraphviz
  conflicts.

- graph2latex has a new argument "nodeTikZ".

- new function bdiagNA for building block diagonal matrices with NA
  values outside the diagonal

- Backward compatibility for R 2.8.0 and rJava 0.6-3.

- CTRL+C interrupts only the last R command and does not close the
  whole R session.

- CRAN has disabled checks on arch="ppc", so MacOS builds are again
  available from CRAN.

- Bug report sends now also the result from traceback()

- A lot of bug fixes for corner and edge cases

- CITATION file

- Please note that full epsilon support is postponed for version 0.6-0

 61 files changed, 868 insertions(+), 482 deletions(-)


Version 0.4-0 (21-Mar-2011, Rev. 462)
=====================================

- Added code for graph based MCPs with partial knowledge of the
  correlation structure from Florian Klinglmueller, who is now
  coauthor.

- New dependencies in this code: gtools and multcomp (and therefore
  also mvtnorm)

- gMCP has a new optional parameter "correlation".
