@@ -11,7 +11,8 @@
 	graph2latex(graph, package="TikZ", scale=1, alpha=0.05, pvalues,
 	fontsize=c("tiny","scriptsize", "footnotesize", "small",
 		"normalsize", "large", "Large", "LARGE", "huge", "Huge"), 
-		nodeTikZ, labelTikZ="near start,above,fill=blue!20")
+		nodeTikZ, labelTikZ="near start,above,fill=blue!20",
+		tikzEnv=TRUE, offset=c(0,0))
 }
 
 \arguments{
@@ -42,6 +43,12 @@
   }
   \item{labelTikZ}{
   	A character string with arguments for the TikZ \code{node} command within an edge.
+  }
+  \item{tikzEnv}{
+  	Logical whether the LaTeX code should be wrapped in a TikZ environment.
+  }
+  \item{offset}{
+  	A numeric of length 2 specifying the x and y offset in the TikZ environment.
   }
 }
 \details{
